# PaindaProtocol

./: .gitignore  LICENSE  README.md  package.json
.claude/: settings.local.json
apps/web/app/: page.tsx
apps/web/app/docs/: layout.tsx  page.tsx
apps/web/app/docs/benchmarks/: page.tsx
apps/web/app/docs/modules/chat/: page.tsx
apps/web/app/docs/modules/core/: page.tsx
apps/web/app/docs/modules/gaming/: page.tsx
apps/web/app/docs/modules/video/: page.tsx
apps/web/app/docs/quick-start/: page.tsx
apps/web/components/: Hero.tsx  StackSection.tsx
csharp/: PaindaFrame.cs  PaindaProtocol.csproj
docs/: CORE_API_ANALYSIS.md  EXAMPLES.md  GAMING_API_ANALYSIS.md  TEST_PLAN.md
python/: pyproject.toml
python/painda/: client.py  diff.py  frame.py
scripts/: test_client.py  test_server.js
