[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "painda-protocol"
version = "0.1.0"
description = "Python client for PaindaProtocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Painda", email = "info@painda.tools"}
]
dependencies = [
    "websockets>=11.0",
]

[project.urls]
Homepage = "https://pp.painda.tools"
Repository = "https://github.com/Paindabear/PaindaProtocol"
